add ProjectInfo